Annotation thickness doesn't work with 3D cursor option #61573

Closed
opened 2019-02-15 13:13:21 +01:00 by jordi torres · 41 comments

System Information
Operating system: MAC OS Mojave 10.14.3
Graphics card: NVIDIA GeForce GT 650M 1024 MB and Intel HD Graphics 4000 1536 MB

Blender Version
Broken: 2.8 2019/2/13

Short description of error
Annotation thickness doesn't work with 3D cursor option
0000-1465.mp4

Developer note:
Mac does not support GPU_line_width().

**System Information** Operating system: MAC OS Mojave 10.14.3 Graphics card: NVIDIA GeForce GT 650M 1024 MB and Intel HD Graphics 4000 1536 MB **Blender Version** Broken: 2.8 2019/2/13 **Short description of error** Annotation thickness doesn't work with 3D cursor option [0000-1465.mp4](https://archive.blender.org/developer/F6628027/0000-1465.mp4) Developer note: Mac does not support GPU_line_width().
Author

Added subscriber: @jorditorres

Added subscriber: @jorditorres

#78013 was marked as duplicate of this issue

#78013 was marked as duplicate of this issue

Added subscriber: @ZedDB

Added subscriber: @ZedDB

You have to be a bit more specific. I can change thickness and it seems to work.

You have to be a bit more specific. I can change thickness and it seems to work.
Author

Right, probably you are making annotations in view placement modality. Try to draw a new annotation, but this time changing it's placement property ( on tops bar) to 3D cursor or surface mode I can attach a video if necessary

Right, probably you are making annotations in **view** placement modality. Try to draw a new annotation, but this time changing it's placement property ( on tops bar) to **3D cursor** or **surface mode** I can attach a video if necessary

Yes that is what I did. The thickness still seems to work in those modes for me.

Yes that is what I did. The thickness still seems to work in those modes for me.
Author

right, In my case doesn't works, even using factory settings. attaching video
0000-1465.mp4

right, In my case doesn't works, even using factory settings. attaching video [0000-1465.mp4](https://archive.blender.org/developer/F6628027/0000-1465.mp4)

Just to make sure, can you try the latest blender beta from today to see if it has been fixed for you?

Just to make sure, can you try the latest blender beta from today to see if it has been fixed for you?
Author

already checked, seems still doesn't works

already checked, seems still doesn't works

Then you need to provide the information we requested in the template and not leave them blank.

Then you need to provide the information we requested in the template and not leave them blank.
Author

Operating system: MAC OS Mojave 10.14.3
Graphics card: NVIDIA GeForce GT 650M 1024 MB and Intel HD Graphics 4000 1536 MB

Blender Version
Broken:
2.8 2019/2/13

Captura de Pantalla 2019-02-19 a les 12.09.41.png

Operating system: MAC OS Mojave 10.14.3 Graphics card: NVIDIA GeForce GT 650M 1024 MB and Intel HD Graphics 4000 1536 MB Blender Version Broken: 2.8 2019/2/13 ![Captura de Pantalla 2019-02-19 a les 12.09.41.png](https://archive.blender.org/developer/F6658274/Captura_de_Pantalla_2019-02-19_a_les_12.09.41.png)

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish

@WilliamReynish can you confirm this issue on your mac?

@WilliamReynish can you confirm this issue on your mac?

Added subscriber: @Vlitz

Added subscriber: @Vlitz

I can confirm this bug occurs as well. And doing so I also found another one related to this. It seems that there is a lag whenever I use the Surface option for the Annotation Placement. It doesn't occur in the other 2 (3D cursor & View) options no matter how much I scribble on the screen. However, in the Surface mode, it lags no matter how steady or fast you annotate. (Let me know if I should report this bug separately.)

I am using the latest 2.80 Beta for macOS (2019.2.15 - faa255c0a4).
Operating system: macOS High Sierra version: 10.13.6 (Macbook Pro 2015)
Graphics card: Intel Iris Graphics 6100
Annotation thickness and lag.mov

I can confirm this bug occurs as well. And doing so I also found another one related to this. It seems that there is a lag whenever I use the Surface option for the Annotation Placement. It doesn't occur in the other 2 (3D cursor & View) options no matter how much I scribble on the screen. However, in the Surface mode, it lags no matter how steady or fast you annotate. (Let me know if I should report this bug separately.) I am using the latest 2.80 Beta for macOS (2019.2.15 - faa255c0a4e4). Operating system: macOS High Sierra version: 10.13.6 (Macbook Pro 2015) Graphics card: Intel Iris Graphics 6100 [Annotation thickness and lag.mov](https://archive.blender.org/developer/F6659962/Annotation_thickness_and_lag.mov)
Antonio Vazquez was assigned by Sebastian Parborg 2019-02-20 15:10:21 +01:00

Added subscriber: @antoniov

Added subscriber: @antoniov

@WilliamReynish confirmed this on his mac too.

@antoniov feel free to reassign if this is not for you.

@WilliamReynish confirmed this on his mac too. @antoniov feel free to reassign if this is not for you.

T61573_Windows.mp4

I cannot reproduce it on Windows 10 with RTX2080TI card.

If the problem is only in Mac, I cannot help here.

[T61573_Windows.mp4](https://archive.blender.org/developer/F6672387/T61573_Windows.mp4) I cannot reproduce it on Windows 10 with RTX2080TI card. If the problem is only in Mac, I cannot help here.

Added subscriber: @fclem

Added subscriber: @fclem

@fclem any idea what could be going wrong on mac?

@fclem any idea what could be going wrong on mac?

I have one idea about the problem.

Currently, the drawing is using GPU_SHADER_3D_UNIFORM_COLOR shader, and not sure if the Mac implementation supports the thickness of the line (GPU_line_width()).

What it's strange is that only works sometimes.

I have one idea about the problem. Currently, the drawing is using GPU_SHADER_3D_UNIFORM_COLOR shader, and not sure if the Mac implementation supports the thickness of the line (GPU_line_width()). What it's strange is that only works sometimes.

Mac does not support GPU_line_width(). I think the View Strokes work because they are rendered with a geom shader. Ideally we should have a geometry shader fallback for OSX thick lines.

Mac does not support GPU_line_width(). I think the View Strokes work because they are rendered with a geom shader. Ideally we should have a geometry shader fallback for OSX thick lines.

Added subscriber: @bonusrhyming

Added subscriber: @bonusrhyming

Same on my mac book.

Same on my mac book.

Added subscriber: @GabrielMoro

Added subscriber: @GabrielMoro

Same here! Didn't even know it worked on the "View" option. It's pretty useless when it's this thin to draw on surfaces. :/

Same here! Didn't even know it worked on the "View" option. It's pretty useless when it's this thin to draw on surfaces. :/
Antonio Vazquez was unassigned by Dalai Felinto 2019-12-23 16:35:09 +01:00

Added subscriber: @PabloGilFernandez

Added subscriber: @PabloGilFernandez

Same issue here on my Macbook Pro...

Same issue here on my Macbook Pro...
Germano Cavalcante changed title from annotation thickness doesn't work with 3D cursor option to Annotation thickness doesn't work with 3D cursor option 2020-02-07 14:18:23 +01:00

Added subscriber: @mimida

Added subscriber: @mimida

Yes, me too, same problem, MacBook Pro.

Yes, me too, same problem, MacBook Pro.
Member

Added subscriber: @MariusGiurgi

Added subscriber: @MariusGiurgi
Member

Yeah. I have the same problem. This has been an issue since the very beginning of 2.8.. Now we have 2.83 (alpha) and this issue is STILL an issue on mac systems. Annotations are completely useless for me with 1px thickness.

The “View” annotation start off as 1px but then they are re-drawned with the set width, but all 3D annotations are 1px lines.. Not visible enough to be useful.

I use annotations for blender demos/tutorials a lot and the fact that this feature is no longer working (on mac) it makes my work much less effective.
There are other blender tasks related to this issue that have apparently closed as if this is NOT an important issue. It makes no sense. This has to be addressed. Are the mac users not important to blender community??

AnnotationThicknessIssue-720p.mov

Yeah. I have the same problem. This has been an issue since the very beginning of 2.8.. Now we have 2.83 (alpha) and this issue is STILL an issue on mac systems. Annotations are completely useless for me with 1px thickness. The “View” annotation start off as 1px but then they are re-drawned with the set width, but all 3D annotations are 1px lines.. Not visible enough to be useful. I use annotations for blender demos/tutorials a lot and the fact that this feature is no longer working (on mac) it makes my work much less effective. There are other blender tasks related to this issue that have apparently closed as if this is NOT an important issue. It makes no sense. This has to be addressed. Are the mac users not important to blender community?? [AnnotationThicknessIssue-720p.mov](https://archive.blender.org/developer/F8427115/AnnotationThicknessIssue-720p.mov)
Contributor

Added subscriber: @dupoxy

Added subscriber: @dupoxy

Added subscriber: @RobertTolppi

Added subscriber: @RobertTolppi

Same here on late 2015 macbook pro. Blender is becoming a nightmare for OSX users. One day OpenGL support is going to be so broken that literally nothing will work anymore :( Praying for a metal port for Google summer of code one day.

Same here on late 2015 macbook pro. Blender is becoming a nightmare for OSX users. One day OpenGL support is going to be so broken that literally nothing will work anymore :( Praying for a metal port for Google summer of code one day.

Added subscriber: @vaporwarewolf

Added subscriber: @vaporwarewolf

Same issue on 2019 16" MBP.

Same issue on 2019 16" MBP.

Added subscribers: @Funnybob, @girafic

Added subscribers: @Funnybob, @girafic

This issue was referenced by bd6cc282d2

This issue was referenced by bd6cc282d28f58766d84d78d4400d3020fe4cb10

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Clément Foucault self-assigned this 2020-06-29 14:20:20 +02:00
Contributor

Removed subscriber: @dupoxy

Removed subscriber: @dupoxy
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
14 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61573
No description provided.