Fix T61573 GPencil: Annotation thickness doesn't work with on OSX

This fixes the issue by using the polyline shader but this does not gives
the best results.

A better way would be to have a dedicated shader for the lines to avoid
the line break at every angle change.